2007-06-15  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Use = instead of == in test.

2007-05-30  Werner Koch  <wk@g10code.com>

	* configure.ac: Camellia is no longer GPL.

2007-05-24  Werner Koch  <wk@g10code.com>

	* configure.ac: Try to use -Wpointer-arith.

2007-05-19  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Fix test for optional UDIV and UDIV_QRNND MPI
	modules.

2007-05-09  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (ac_cv_mpi_config_done): Unused variable removed.
	(ac_cv_mpi_mod_list, MPI_MOD_LIST_LO, MPI_MOD_LIST_O): Removed.
	(MPI_MOD_ASM_MPIH_ADD1, MPI_MOD_ASM_MPIH_SUB1,
	MPI_MOD_ASM_MPIH_MUL1, MPI_MOD_ASM_MPIH_MUL2,
	MPI_MOD_ASM_MPIH_MUL3, MPI_MOD_ASM_MPIH_LSHIFT,
	MPI_MOD_ASM_MPIH_RSHIFT, MPI_MOD_ASM_MPIH_UDIV,
	MPI_MOD_ASM_MPIH_UDIV_QRNND, MPI_MOD_C_MPIH_ADD1,
	MPI_MOD_C_MPIH_SUB1, MPI_MOD_C_MPIH_MUL1, MPI_MOD_C_MPIH_MUL2,
	MPI_MOD_C_MPIH_MUL3, MPI_MOD_C_MPIH_LSHIFT, MPI_MOD_C_MPIH_RSHIFT,
	MPI_MOD_C_MPIH_UDIV, MPI_MOD_C_MPIH_UDIV_QRNND): New automake
	variables.

2007-05-04  Werner Koch  <wk@g10code.com>

	Released 1.3.0.

	* configure.ac: Set LT to C15/A4/R0.
	
	* configure.ac: Require automake 1.10
	(AM_PROG_CC_C_O): New.

2007-05-03  Werner Koch  <wk@g10code.com>

	* configure.ac: Fix detection of GPLed random modules.

2007-05-02  Werner Koch  <wk@g10code.com>

	* configure.ac (LIBGCRYPT_DIGESTS, LIBGCRYPT_CIPHERS) 
	(LIBGCRYPT_PUBKEY_CIPHERS): Ac_define lists of algorithms.
	(default_ciphers): Don't make camellia a default.

2007-05-02  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Add Camellia.

2007-04-30  Werner Koch  <wk@g10code.com>

	* README.apichanges: Move to doc/.
	* Makefile.am (EXTRA_DIST): Removed that file.

2007-04-28  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Allow to specify additional search directories
	with --enable-mpi-path.

2007-04-16  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for sysconf.