@@ -34,6 +34,7 @@ Felix von Leitner	   leitner@amdiv.de
 Frank Heckenbach	   heckenb@mi.uni-erlangen.de
 Frank Stajano		   frank.stajano@cl.cam.ac.uk
 Gaël Quéri		   gqueri@mail.dotcom.fr
+Gregor Riepl               seto-kun@freesurf.ch
 Gerlinde Klaes             gk@u64.de
 Greg Louis		   glouis@dynamicro.on.ca
 Greg Troxel		   gdt@ir.bbn.com
