@@ -1,3 +1,8 @@
+2007-06-15  Werner Koch  <wk@g10code.com>
+
+	* gcrypt.texi (Controlling the library): Clarified the use of
+	GCRYCTL_ENABLE_QUICK_RANDOM.
+
 2007-04-30  Werner Koch  <wk@g10code.com>
 
 	* HACKING: New.  Two items by Marcus.
